--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,21 @@
 <script type="text/javascript" src="../static/js/dl/jQuery.js"></script>
 <script type="text/javascript" src="../static/js/dl/fun.base.js"></script>
 <script type="text/javascript" src="../static/js/dl/script.js"></script>
+<script>
+    var chickUser = function() {
+        var userName = $('#value_1').val();
+        var pwd = $('#value_2').val();
 
+        $.post("../../user/login", {'id':userName,'pwd':pwd},function(data){
+            console.log(data);
+
+                if(data.loginInfo){
+                    alert("登录成功！");
+                }
+            },'json');
+
+    }
+</script>
 
 <!--[if IE 6]>
 <script src="../js/DD_belatedPNG.js" type="text/javascript"></script>
