--- a/src/main/resources/templates/pages/public.html
+++ b/src/main/resources/templates/pages/public.html
@@ -3,10 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>工资管理系统</title>
-    <link rel="stylesheet" href="css/public.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="../../static/manage/css/public.css"/>
+    <link rel="stylesheet" href="../../static/manage/css/style.css"/>
+
 </head>
 <body>
+<script type="text/javascript" src="../../static/js/dl/jQuery.js"></script>
 <!--头部-->
 <header class="publicHeader">
     <h1>工资管理系统</h1>
@@ -27,14 +29,14 @@
         <h2 class="leftH2"><span class="span1"></span>功能列表 <span></span></h2>
         <nav>
             <ul class="list">
-                <li><a href="billList.html">员工管理</a></li>
-                <li><a href="providerList.html">工资管理</a></li>
-                <li><a href="login.html">退出系统</a></li>
+                <li><a onclick="menuClick('billList')">员工管理</a></li>
+                <li><a onclick="menuClick('providerList')">工资管理</a></li>
+                <li><a onclick="menuClick('login')">退出系统</a></li>
             </ul>
         </nav>
     </div>
     <div class="right">
-        <iframe align="center" width="100%" height="170" src="index.html"  frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+        <iframe id="iframe" align="center" width="100%" height="170" src="index.html"  frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     </div>
 </section>
 <footer class="footer">
@@ -44,7 +46,12 @@
     联系方式：zyf_aln@sina.com<br/>
     author:<a href="#">Yvan/Boom/</a>
 </footer>
-<script src="js/time.js"></script>
+<script src="../../static/manage/js/time.js"></script>
+<script>
 
+    function menuClick(id) {
+        $("#iframe").setAttribute("src",id);
+    }
+</script>
 </body>
 </html>
