--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,12 +43,11 @@
         $.post("../../user/login", {'id':userName,'pwd':pwd},function(data){
             $('#loading').hide();
                 if(data.loginInfo){
-                    alert("登录成功！");
-                }
-            },function () {
-            $('#loading').hide();
-            alert("shib！");
-        },'json');
+                    location.href = "../pages/public";
+                }else {
+                    alert("密码或用户错误!");
+				}
+            },'json');
 
     }
 </script>
