--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -28,14 +28,14 @@
         <h2 class="leftH2"><span class="span1"></span>功能列表 <span></span></h2>
         <nav>
             <ul id="menuUl" style="display: none" class="list">
-                <li><a onclick="menuClick('salarymanager/list.html',this)">工资管理</a></li>
+                <li><a onclick="menuClick('salarymanager/billList.html',this)">工资管理</a></li>
                 <li id="empSalaryQuery"><a onclick="menuClick('salaryuser/list.html',this)">工资查询</a></li>
                 <li><a onclick="menuClick('employee/list.html',this)">员工管理</a></li>
             </ul>
         </nav>
     </div>
     <div class="right">
-        <iframe id="iframe" align="center" width="100%" height="170" src="welcome.html" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+        <iframe style="height: 100%;width: 100%" name="iframe" id="iframe" align="center" width="100%" height="170" src="welcome.html" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
     </div>
 </section>
 <footer class="footer">
@@ -47,6 +47,7 @@
 </footer>
 <script type="text/javascript" src="../static/js/jquery.js"></script>
 <script src="../static/js/time.js"></script>
+<script src="../static/js/parent.js"></script>
 <script>
     function menuClick(id,obj) {
         $("#iframe").attr("src",id);
@@ -82,9 +83,9 @@
     <div class="removerChid">
         <h2>提示</h2>
         <div class="removeMain">
-            <p>你确定要删除该订单吗？</p>
-            <a href="#" id="yes">确定</a>
-            <a href="#" id="no">取消</a>
+            <p id="confirmTishi"></p>
+            <a href="#" id="confirmyes">确定</a>
+            <a href="#" id="confirmno">取消</a>
         </div>
     </div>
 </div>
