--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,7 +8,7 @@
 <body>
 <section class="publicMian">
 
-        <img class="wColck" src="img/clock.jpg" alt=""/>
+        <img class="wColck" src="../static/img/clock.jpg" alt=""/>
         <div class="wFont">
             <h2>Admin</h2>
             <p>欢迎来到山大六院工资管理系统!</p>
