--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -28,7 +28,7 @@
         <h2 class="leftH2"><span class="span1"></span>功能列表 <span></span></h2>
         <nav>
             <ul id="menuUl" style="display: none" class="list">
-                <li><a onclick="menuClick('salarymanager/billList.html',this)">工资管理</a></li>
+                <li><a onclick="menuClick('salarymanager/list.html',this)">工资管理</a></li>
                 <li id="empSalaryQuery"><a onclick="menuClick('salaryuser/list.html',this)">工资查询</a></li>
                 <li><a onclick="menuClick('employee/list.html',this)">员工管理</a></li>
             </ul>
