--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -16,7 +16,15 @@ a{
 li{
     list-style: none;
 }
+select{
+    width: auto;
+    padding: 0 0.8%;
+    margin: 0;
+}
 
+option{
+    text-align:center;
+}
 /*公共样式，头部*/
 .publicHeader{
     height: 48px;
