员工管理 页面跳转

--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -30,7 +30,7 @@
             <ul id="menuUl" style="display: none" class="list">
                 <li><a onclick="menuClick('salarymanager/list.html',this)">工资管理</a></li>
                 <li id="empSalaryQuery"><a onclick="menuClick('salaryuser/list.html',this)">工资查询</a></li>
-                <li><a onclick="menuClick('employee/list.html',this)">员工管理</a></li>
+                <li><a onclick="menuClick('employee/billList.html',this)">员工管理</a></li>
             </ul>
         </nav>
     </div>
