登陆点击两次

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
             <h1>工资管理系统</h1>
         </header>
         <section class="loginCont">
-            <form id="loginFrom" class="loginForm" method="post">
+            <form id="loginFrom" class="loginForm" method="post" onsubmit="return false">
                 <div class="inputbox">
                     <label for="id">用户名：</label>
                     <input id="id" type="text" name="id" placeholder="请输入用户名" required/>
