--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,6 +45,11 @@
                 }
             },'json');
         })
+        $(function () {
+            if(window.top != null && window.top.document.URL != document.URL){
+                window.top.location = document.URL;
+            }
+        })
     </script>
 
     <div id="loading">
