对话框调整

--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -92,5 +92,25 @@
         </div>
     </div>
 </div>
+
+<div class="remove" id="alertBi">
+    <div class="removerChid">
+        <h2 id="alertTitle">提示</h2>
+        <div class="removeMain">
+            <p id="alertTishi"></p>
+            <a href="#" onclick="alertHide()">确定</a>
+        </div>
+    </div>
+</div>
+
+<div class="remove" id="modelBi">
+    <div class="removerChid">
+        <h2 id="modelTitle">提示</h2>
+        <div class="removeMain" id="modelMain">
+
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
