--- a/src/main/resources/templates/salarymanager/list.html
+++ b/src/main/resources/templates/salarymanager/list.html
@@ -39,7 +39,7 @@
     </form>
 
     <input type="button" onclick="queryPage(1)" value="查询"/>
-    <a href="billAdd.html">添加订单</a>
+    <a href="add.html">添加员工工资</a>
 </div>
 <table id="dataTab" class="providerTable" cellpadding="0" cellspacing="0">
     <tr class="firstTr">
