--- a/src/main/resources/templates/salaryuser/HTlist.html
+++ b/src/main/resources/templates/salaryuser/HTlist.html
@@ -1,6 +1,5 @@
 ﻿<link rel="stylesheet" href="../../static/css/public.css"/>
 <link rel="stylesheet" href="../../static/css/style.css"/>
-<link rel="stylesheet" href="../../static/css/salarylist.css"/>
 <section class="publicMian">
     <div style="width: 100%">
         <div class="location">
@@ -88,6 +87,6 @@
 <script src="../../static/js/time.js"></script>
 <script src="../../static/js/staffsalary.js"></script>
 <script src="../../static/js/child.js"></script>
-<script src="../../static/js/alert.js"></script>
+<!--<script src="../../static/js/alert.js"></script>-->
 
 
