--- a/src/main/resources/templates/salaryuser/list.html
+++ b/src/main/resources/templates/salaryuser/list.html
@@ -1,39 +1,4 @@
-﻿<link rel="stylesheet" href="../../static/css/public.css"/>
-<link rel="stylesheet" href="../../static/css/style.css"/>
-<section class="publicMian">
-    <div style="width: 100%">
-        <div class="location">
-            <strong>你现在所在的位置是:</strong>
-            <span>员工工资查询</span>
-        </div>
-        <div class="search">
-            <span>请选择年份：</span>
-            <select id="year" name="year">
-                <option value="">--请选择--</option>
-            </select>
-
-            <span>请选择月份：</span>
-            <select id="month" name="month">
-                <option value="">--请选择--</option>
-            </select>
-
-            <input type="button" onclick="search()" value="查询"/>
-        </div>
-        <!--账单表格 样式和员工信息-->
-        <div class="providerAdd" style="margin: 0px; margin-top: 15px; overflow:scroll; width:96%; height:440px;">
-            <form action="#">
-                <table class="providerTable" cellpadding="0" cellspacing="0">
-
-                </table>
-                <div class="providerAddBtn" style="margin-left:40%; width: 100%;">
-                    <input type="button" value="奖金详情" onclick="ShowbBonus()"/>
-                    <input type="button" value="下载打印" onclick="Printing()"/>
-                </div>
-            </form>
-        </div>
-
-    </div>
-</section>
+﻿<iframe style="height: 100%;width: 100%" name="base" id="base" align="center" width="100%" height="170" src="#" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 
 <!--点击删除按钮后弹出的页面-->
 <div class="zhezhao"></div>
@@ -43,5 +8,3 @@
 <script src="../../static/js/staffsalary.js"></script>
 <script src="../../static/js/child.js"></script>
 <!--<script src="../../static/js/alert.js"></script>-->
-
-
