--- a/src/main/resources/templates/salarymanager/list.html
+++ b/src/main/resources/templates/salarymanager/list.html
@@ -65,7 +65,7 @@
         loadingShow();
         loadDateData();
         loadDepartData();
-        loadSalaryTypeData();
+        loadEmpTypeData();
         queryPage(1);
     });
 </script>
