--- a/src/main/resources/templates/salarymanager/add.html
+++ b/src/main/resources/templates/salarymanager/add.html
@@ -8,40 +8,106 @@
 </head>
 <body>
 <!--头部-->
+<style>
+    .titletd{
+        width: 15%;
+        min-width: 80px;
+    }
+    .xialaDiv{
+        display: none;
+        position: absolute;
+        background-color: #fff;
+        margin: 0px;
+        height: 100px;
+        overflow: auto;
+        border: 1px #ccc solid;
+        border-radius: 5px;
+        margin-top: -5px;
+        width: 20%;
+        }
+    #emps li{
+        background-color: #6aa7d6;
+        line-height: 40px;
+        margin-bottom: 2px;
+        padding-left: 15px;
+    }
+    #emps li:hover{
+        background-color: #3a8dc1;
+    }
+</style>
 
 <div class="location">
     <strong>你现在所在的位置是:</strong>
-    <span>工资管理</span>
+    <span>添加员工工资信息</span>
 </div>
-<div class="search">
-    <form id="salarySearchForm" style="display: inline-block">
-        <span>员工类型：</span>
-        <select id="empType" name="empType">
+<div class="providerAdd">
 
-        </select>
-        <span>员工姓名：</span>
-        <input type="text" style="width: 105px" id="empName" name="empName" placeholder="请输入员工姓名"/>
-        <input type="hidden" id="pageN" name="pageN" />
-        <input type="hidden" id="salaryDate" name="salaryDate" />
+    <form id="salarySearchForm" style="overflow: auto;height: 490px;">
+        <table style="width: 100%">
+            <tr>
+                <td>员工信息</td>
+                <td><div class="search" style="height: auto">
+                        <table style="width: 100%"><tr>
+                            <td class="titletd">员工科室：</td>
+                            <td style="width: 35%"> <select id="departId" name="departId" style="width:69%;margin: 0px">
+                                <option value="">--请选择--</option>
+                                </select>
+                            </td>
+                            <td  class="titletd">员工姓名：</td>
+                            <td>
+                                <input type="hidden" name="empId" id="empId" />
+                                <input type="text" id="empName" name="empName" style="width: 65%;" onfocus="loadEmployees(this)" onkeyup="loadEmployees(this)" placeholder="请输入员工姓名"/>
+                                <div class="xialaDiv" style="margin: 0px;margin-top: -5px;" >
+                                    <ul id="emps" >
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="titletd">年月：</td>
+                            <td class="titletd"> <select id="salaryYear" name="salaryYear" style="width: 34%;margin: 0px">
+                                <option value="">--请选择--</option>
+                            </select>
+                            <select id="salaryMonth" name="salaryMonth"  style="width: 34%;margin: 0px">
+                                <option value="">--请选择--</option>
+                            </select>
+                            <input type="hidden" id="salaryDate" name="salaryDate" /></td>
+                        </td>
+                        </tr>
+                    </table>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>工资信息</td>
+                <td>
+                    <table id="salaryInput" style="width: 100%">
+                        <tr><td>
+                        <div class="search" style="height: 100px">
 
-        <span>科室</span>
-        <select id="departId" name="departId">
-            <option value="">--请选择--</option>
-        </select>
-
-        <span>年月：</span>
-        <select id="salaryYear" name="salaryYear">
-            <option value="">--请选择--</option>
-        </select>
-        <select id="salaryMonth" name="salaryMonth">
-            <option value="">--请选择--</option>
-        </select>
+                        </div></td></tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <div class="removeMain">
+            <a href="#" style="margin: 0px;margin-right: 30px">确定</a>
+            <a href="#"style="margin: 0px;" onclick="window.history.back();" >返回</a>
+        </div>
     </form>
 
-    <input type="button" onclick="queryPage(1)" value="查询"/>
 </div>
 <script type="text/javascript" src="../../static/js/jquery.js"></script>
 <script src="../../static/js/child.js"></script>
 <script src="../../static/js/salaryManager.js"></script>
+<script>
+    $(function () {
+        loadingShow();
+        loadDepartData();
+        loadSalaryTypeData();
+        loadDateData();
+        loadingHide();
+    });
+</script>
 </body>
 </html>
