--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -63,7 +63,7 @@
         $.get("../../user/getLoginUser", {},function(data){
             $('#loading').hide();
             if(data.code == "0000"){
-                $("#loginUserName").text(data.data.empId);
+                $("#loginUserName").text(data.data.empName);
                 if(data.data.userType == 0){
                     $("#empSalaryQuery").hide();
                 }else {
