--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -48,6 +48,7 @@
 <script type="text/javascript" src="../static/js/jquery.js"></script>
 <script src="../static/js/time.js"></script>
 <script src="../static/js/parent.js"></script>
+<script src="../static/js/ajaxFileUpload.js"></script>
 <script>
     function menuClick(id,obj) {
         $("#iframe").attr("src",id);
