--- a/src/main/resources/templates/salarymanager/list.html
+++ b/src/main/resources/templates/salarymanager/list.html
@@ -39,7 +39,8 @@
     </form>
 
     <input type="button" onclick="queryPage(1)" value="查询"/>
-    <a href="add.html">添加员工工资</a>
+    <a href="add.html" style="width: auto;padding-right: 10px;margin: 10px;">添加员工工资</a>
+    <a style="width: auto;padding-right: 10px;margin: 10px;" onclick="intoImport()">导入</a>
 </div>
 <table id="dataTab" class="providerTable" cellpadding="0" cellspacing="0">
     <tr class="firstTr">
