--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -384,5 +384,13 @@ input[type='reset']:active, input[type='reset']:focus, .providerView a:hover, .p
 
 }
 
+#usertable tr th{
+    border-right: 0.5px solid black;
+    border-top: 0.5px solid black;
+    line-height: 30px;
+}
 
+.firstTr{
+    font-size: 20px;
+}
 
