--- a/src/main/resources/templates/salaryuser/list.html
+++ b/src/main/resources/templates/salaryuser/list.html
@@ -1,4 +1,44 @@
-﻿<iframe style="height: 100%;width: 100%" name="base" id="base" align="center" width="100%" height="170" src="#" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+﻿<link rel="stylesheet" href="../../static/css/public.css"/>
+<link rel="stylesheet" href="../../static/css/style.css"/>
+
+<section class="publicMian">
+    <div style="width: 100%">
+        <div class="location">
+            <strong>你现在所在的位置是:</strong>
+            <span>员工工资查询</span>
+        </div>
+        <div class="search">
+            <span>请选择年份：</span>
+            <select id="year" name="year">
+                <option value="">--请选择--</option>
+            </select>
+
+            <span>请选择月份：</span>
+            <select id="month" name="month">
+                <option value="">--请选择--</option>
+            </select>
+
+            <input type="button" onclick="search()" value="查询"/>
+        </div>
+        <!--账单表格 样式和员工信息-->
+        <div class="providerAdd" style="margin: 0px; margin-top: 15px; overflow:scroll; width:96%; height:440px;">
+            <table id='usertable' class="providerTable" cellpadding="0" cellspacing="0" style="">
+                <!--<tr class="firstTrs">-->
+                <!--<th width="10%" colspan="5">****年**月医疗公司职工工资明细表</th>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                <!--<th width="20%">姓名</th>-->
+                <!--<th width="20%" colspan="2">张三</th>-->
+                <!--<th width="20%">职工编号</th>-->
+                <!--<th width="20%">HT789378939</th>-->
+                <!--</tr>-->
+            </table>
+            <div class="providerAddBtn" style="margin-left:40%; width: 100%;">
+                <input type="button" value="下载打印" onclick="Print('.providerTable')"/>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!--点击删除按钮后弹出的页面-->
 <div class="zhezhao"></div>
@@ -7,4 +47,7 @@
 <script src="../../static/js/time.js"></script>
 <script src="../../static/js/staffsalary.js"></script>
 <script src="../../static/js/child.js"></script>
+<script src="../../static/js/Print.js"></script>
 <!--<script src="../../static/js/alert.js"></script>-->
+
+
