--- a/src/main/resources/templates/employee/billList.html
+++ b/src/main/resources/templates/employee/billList.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns:background="http://www.w3.org/1999/xhtml">
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/public.css"/>
     <link rel="stylesheet" href="../static/css/style.css"/>
+    <link href="../static/css/loading.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
         <div class="location">
@@ -16,6 +17,12 @@
 
             <span>员工姓名：</span>
             <input id="empName" type="text" placeholder="请输入员工姓名"/>
+            <span>员工类型：</span>
+            <select id="empType" name="empType">
+                <option value="">---请选择---</option>
+                <option value="0">正式员工</option>
+                <option value="1">合同员工</option>
+            </select>
 
             <!--<span>是否付款：</span>
             <select name="fukuan">
@@ -23,8 +30,8 @@
                 <option value="">已付款</option>
                 <option value="">未付款</option>
             </select>-->
-
             <input id="queryEmp" onclick="queryEmp()" type="button" value="查询"/>
+            <input id="importEmp" style="background: #87c212" onclick="openImportEmp()" type="button" value="员工导入"/>
             <a onclick="addEmployee()">添加员工</a>
         </div>
         <table id="employee" class="providerTable" cellpadding="0" cellspacing="0">
@@ -45,6 +52,10 @@
 <script src="../static/js/jquery.js"></script>
 <script src="../static/js/js.js"></script>
 <script src="../static/js/page.js"></script>
+<script src="../static/js/child.js"></script>
 <script src="../static/js/empManage.js"></script>
+<div id="loading">
+    <img src="../static/img/loading.gif">
+</div>
 </body>
 </html>
