奖金详情添加

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,7 +10,7 @@
 
         <img class="wColck" src="../static/img/clock.jpg" alt=""/>
         <div class="wFont">
-            <h2>Admin</h2>
+            <h2 id="user"></h2>
             <p>欢迎来到山大六院工资管理系统!</p>
 			<span id="hours"></span>
         </div>
