--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -385,8 +385,7 @@ input[type='reset']:active, input[type='reset']:focus, .providerView a:hover, .p
 }
 
 #usertable tr th{
-    border-right: 0.5px solid black;
-    border-top: 0.5px solid black;
+    border: 0.5px solid  #e5f2ff;
     line-height: 30px;
 }
 
