--- a/src/main/resources/templates/salarymanager/import.html
+++ b/src/main/resources/templates/salarymanager/import.html
@@ -1,7 +1,7 @@
 <div>
-    <a href="#" style="margin: 0px;">合同工资模板</a>
-    <a href="#" style="margin: 0px;">正式工资模板</a>
-    <a href="#" style="margin: 0px;">其他奖模板</a>
+    <a href="../static/template/salary2.xlsx" style="margin: 0px;">合同工资模板</a>
+    <a href="../static/template/salary1.xlsx" style="margin: 0px;">正式工资模板</a>
+    <a href="../static/template/detail.xlsx" style="margin: 0px;">其他奖模板</a>
 </div>
 <div style="margin-top: 15px">
 年月：
