--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -14,7 +14,7 @@
 
     <div class="publicHeaderR">
         <p><span>下午好！</span><span id="loginUserName" style="color: #fff21b"> </span> , 欢迎你！</p>
-        <a href="login.html">退出</a>
+        <a href="" onclick="signOut()">退出</a>
     </div>
 </header>
 <!--时间-->
@@ -54,6 +54,15 @@
         $("#iframe").attr("src",id);
         $(obj).parent().siblings().removeClass("selected");
         $(obj).parent().addClass("selected");
+    }
+
+    function signOut(){
+        $.get("../../user/signOut", {},function(data){
+            $('#loading').hide();
+            if(data.code == "0000"){
+                location.href = "login.html";
+            }
+        },'json');
     }
 
     $(function(){
