--- a/src/main/resources/templates/salarymanager/import.html
+++ b/src/main/resources/templates/salarymanager/import.html
@@ -1,4 +1,4 @@
-<div>
+<div style="padding-top: 30px">
     <a href="../static/template/salary2.xlsx" style="margin: 0px;">合同工资模板</a>
     <a href="../static/template/salary1.xlsx" style="margin: 0px;">正式工资模板</a>
     <a href="../static/template/detail.xlsx" style="margin: 0px;">其他奖模板</a>
