--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -14,7 +14,7 @@
 
     <div class="publicHeaderR">
         <p><span>下午好！</span><span id="loginUserName" style="color: #fff21b"> </span> , 欢迎你！</p>
-        <a href="" onclick="signOut()">退出</a>
+        <a onclick="signOut()">退出</a>
     </div>
 </header>
 <!--时间-->
@@ -31,6 +31,7 @@
                 <li><a onclick="menuClick('salarymanager/list.html',this)">工资管理</a></li>
                 <li id="empSalaryQuery"><a onclick="menuClick('salaryuser/list.html',this)">工资查询</a></li>
                 <li><a onclick="menuClick('employee/billList.html',this)">员工管理</a></li>
+                <li><a onclick="modifyPass()">修改密码</a></li>
             </ul>
         </nav>
     </div>
@@ -56,13 +57,19 @@
         $(obj).parent().addClass("selected");
     }
 
+    function modifyPass() {
+        modelShow("modifyPass", "password.html", "修改密码", 250, 270);
+    }
+
     function signOut(){
-        $.get("../../user/signOut", {},function(data){
-            $('#loading').hide();
-            if(data.code == "0000"){
-                location.href = "login.html";
-            }
-        },'json');
+        confirmShow("确认退出吗？", function () {
+            $.get("../../user/signOut", {},function(data){
+                $('#loading').hide();
+                if(data.code == "0000"){
+                    location.href = "login.html";
+                }
+            },'json');
+        });
     }
 
     $(function(){
@@ -121,7 +128,7 @@
 <div class="remove" id="modelBi">
     <div class="removerChid">
         <h2 id="modelTitle">提示</h2>
-        <div class="removeMain" id="modelMain">
+        <div class="removeMain" id="modelMain" style="margin-top: 0px">
 
         </div>
     </div>
