--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -41,7 +41,7 @@ option{
     font-size: 22px;
     padding-left:80px;
     text-shadow: 2px 1px #000;
-    background: url("../img/logo.png") 30px center no-repeat;
+    background: url("../img/logo.jpeg") 30px center no-repeat;
     background-size:40px 32px;
 
 }
