--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,9 +8,10 @@
     <link href="../static/css/loading.css" rel="stylesheet" type="text/css" />
 </head>
 <body class="login_bg">
+
     <section class="loginBox">
         <header class="loginHeader">
-            <h1>工资管理系统</h1>
+            <h1><img src="../static/img/logo.jpeg" height="30px" width="30px">山西医科大学第六医院</h1>
         </header>
         <section class="loginCont">
             <form id="loginFrom" class="loginForm" method="post" onsubmit="return false">
