--- a/src/main/resources/templates/salaryuser/list.html
+++ b/src/main/resources/templates/salaryuser/list.html
@@ -1,5 +1,7 @@
 ﻿<link rel="stylesheet" href="../../static/css/public.css"/>
 <link rel="stylesheet" href="../../static/css/style.css"/>
+<link rel="stylesheet" href="../../static/css/salaryUser.css"/>
+
 
 <section class="publicMian">
     <div style="width: 100%">
