--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,14 +7,10 @@
 </head>
 <body>
 <section class="publicMian">
-
-        <img class="wColck" src="../static/img/clock.jpg" alt=""/>
-        <div class="wFont">
+        <div class="wFont" style="background-image: url('../static/img/title.jpeg'); background-repeat: no-repeat;">
             <h2 id="user"></h2>
-            <p>欢迎来到山大六院工资管理系统!</p>
-			<span id="hours"></span>
+            <!--<h1>欢迎来到山大六院工资管理系统!</h1>-->
         </div>
-
 </section>
 <footer class="footer">
 </footer>
