--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
     <section class="loginBox">
         <header class="loginHeader">
-            <h1><img src="../static/img/logo.jpeg" height="30px" width="30px">山西医科大学第六医院</h1>
+            <h1>山西医科大学第六医院</h1>
         </header>
         <section class="loginCont">
             <form id="loginFrom" class="loginForm" method="post" onsubmit="return false">
