打印页面调整

--- a/src/main/resources/templates/salaryuser/list.html
+++ b/src/main/resources/templates/salaryuser/list.html
@@ -24,7 +24,7 @@
         </div>
         <!--账单表格 样式和员工信息-->
         <div class="providerAdd" style="margin: 0px; margin-top: 15px; overflow:scroll; width:96%; height:440px;">
-            <table id='usertable' class="providerTable" cellpadding="0" cellspacing="0" style="">
+            <table id='usertable' class="providerTable" cellpadding="0" cellspacing="0">
                 <!--<tr class="firstTrs">-->
                 <!--<th width="10%" colspan="5">****年**月医疗公司职工工资明细表</th>-->
                 <!--</tr>-->
