--- a/src/main/resources/templates/salarymanager/update.html
+++ b/src/main/resources/templates/salarymanager/update.html
@@ -55,6 +55,7 @@
                         <td>
                             <input type="hidden" name="empId" id="empId" />
                             <input type="hidden" name="salaryId" id="salaryId" />
+                            <input type="hidden" name="bunsIds" id="bunsIds" />
                             <input type="text" id="empName" name="empName" style="width: 65%;background-color: #cccccc"  readonly="readonly" />
                         </td>
                     </tr>
@@ -91,6 +92,7 @@
 <script src="../../static/js/child.js"></script>
 <script src="../../static/js/salaryManager.js"></script>
 <script>
+    var bunsNum = 0;
     $(function () {
         loadingShow();
         var url = window.location.href;
