--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -1,7 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta http-equiv=Content-Type content=“text/html;charset=utf-8″>
+    <meta http-equiv=X-UA-Compatible content=IE=EmulateIE7>
+    <meta http-equiv=X-UA-Compatible content=IE=EmulateIE8>
+    <meta http-equiv=X-UA-Compatible content=IE=EmulateIE9>
     <title>工资管理系统</title>
     <link rel="stylesheet" href="../static/css/public.css"/>
     <link rel="stylesheet" href="../static/css/style.css"/>
