员工导入修改

--- a/src/main/resources/templates/employee/importImp.html
+++ b/src/main/resources/templates/employee/importImp.html
@@ -1,6 +1,6 @@
 ﻿<div style="padding-top: 30px">
-    <a href="../../emp/exportEmpModel?importType=1" style="margin: 0px;">合同工导入模板</a>
-    <a href="../../emp/exportEmpModel?importType=0" style="margin: 0px;">正式工导入模板</a>
+    <a href="../../emp/exportEmpModel?importType=1" style="margin: 0px;">员工导入模板</a>
+    <!--<a href="../../emp/exportEmpModel?importType=0" style="margin: 0px;">正式工导入模板</a>-->
     <!--<a onclick="exportEmpModel()" style="margin: 0px;">其他奖模板</a>-->
 </div>
 <input type="file" style="margin-top: 20px;" id="importEmp" name="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-excel" />
